updated according to new css style.

--- a/apps/core/templates/core/library_detail.html
+++ b/apps/core/templates/core/library_detail.html
@@ -35,7 +35,7 @@ Library Details
         
 <!-- Library Sample Detail -->
 <div class="container">
-    <h4 style="color:#5D4037">Library Sample Detail</h4>
+    <h4>Library Sample Detail</h4>
     {% if library.has_library_sample_detail %}
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
@@ -63,7 +63,7 @@ Library Details
 
 <!-- Library Construction Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Library Construction Information</h4>
+    <h4>Library Construction Information</h4>
     {% if library.has_library_construction_information %}
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
@@ -91,7 +91,7 @@ Library Details
   
 <!-- Library Quantification and Storage -->
 <div class="container">
-    <h4 style="color:#5D4037">Library Quantification and Storage</h4>
+    <h4>Library Quantification and Storage</h4>
     {% if library.has_library_quantification_and_storage %}
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
@@ -119,7 +119,7 @@ Library Details
 
 <!-- Sublibrary Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Sublibrary Information</h4>
+    <h4>Sublibrary Information</h4>
     {% if library.sublibraryinformation_set.all %}
     <div class="table-responsive" style="text-align:center;">
         <table class="table-striped table-bordered">
@@ -151,7 +151,7 @@ Library Details
 
 <!-- Sequencing Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Sequencing Information</h4>
+    <h4>Sequencing Information</h4>
     {% if library.sequencing_set.all %}
     <div class="table">
         <table class="table">
