--- a/apps/core/templates/core/sample_detail.html
+++ b/apps/core/templates/core/sample_detail.html
@@ -31,7 +31,7 @@ Sample Details
     
 <!-- Additional Sample Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Additional Sample Information</h4>
+    <h4>Additional Sample Information</h4>
     {% if sample.has_additional_sample_information %}
     <div class="container" style="float:left; width:35%; padding:0">
         <table class="table-striped">
@@ -59,7 +59,7 @@ Sample Details
     
 <!-- Library Information -->
 <div class="container">
-    <h4 style="color:#5D4037">Library Information</h4>
+    <h4>Library Information</h4>
     {% if sample.library_set.all %}
     <div class="table">
         <table class="table">
