--- a/apps/core/templates/core/sample_list.html
+++ b/apps/core/templates/core/sample_list.html
@@ -7,7 +7,7 @@ List of Samples
 
 {% block body %}
 <div class="container" style="padding:0; margin-bottom:5px;">
-    <h4 style="float:left;">Select a sample to view details</h4>
+    <h4 style="float:left;">Select a sample to view its details</h4>
     <a class="btn btn-primary btn-sm" style="float:right; margin-top:5px;" href="{% url 'core:sample_create' %}">Add Sample</a>
 </div>
 <div class="container" style="background-color:#F5F5F5;">
