--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -9,6 +10,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <title>ElastiDjango Database Project</title>
+        <link rel="stylesheet" href="{% static 'core/style.css' %}" />
+        <!-- <script scr="{% static 'core/scripts.js' %}"></script> -->
+
     </head>
     <body>
         <!-- Header -->
@@ -16,11 +20,26 @@
             <div class="navbar-header">
                 <a class="navbar-brand" style="color:white;" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Single Cell Database (<i>development version</i>)</a>
             </div>
+
+
+            <!-- Search input box -->
             <div id="navbar" class="navbar-collapse collapse" data-toggle="tooltip">
-                <form class="navbar-form navbar-right" action="{% url 'search' %}">
-                    <input type="text" id="search" name="query_str" class="form-control" placeholder=" Search...">
-                </form>
+            <form id="search-form" name="search-form" class="navbar-form navbar-right" action="{% url 'search' %}">
+                <div class="right-inner-addon">
+                    <i class="icon-search"></i>
+                    <input type="text" id="search" name="query_str" class="form-control" placeholder="Search..." />
+                </div>
+            </form>
             </div>
+            <!-- end of Search input box -->
+
+            <!-- Username input box -->
+<!--              <div class="left-inner-addon ">
+                <i class="icon-user"></i>
+                <input type="text" class="form-control" placeholder="Username" />
+            </div>
+ -->            <!-- end of Username input box -->
+        
         </div><br>
         <!-- end of header -->
 
@@ -31,5 +50,12 @@
         <!-- end of page title -->
 
         {% block body %}{% endblock %}
+
+        <!-- Footer -->
+<!--         <div class="container" id="footer">
+            &copy; 2016&ndash;2016 <a href="">BC Cancer Agency</a>. Single cell database is licensed under the <a href="https://github.com/harvesthq/chosen/blob/master/LICENSE.md">MIT license</a>.
+        </div>
+ -->        <!-- end of Footer -->
+    
     </body>
 </html>
