--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -13,17 +13,37 @@ Create Library
             <legend style="color:#5D4037">Library Information</legend>
             <table class="table-condensed">
                 <thead>
-                {{form}}
-                <!-- project update -->
-                <!-- td><b>Project:<b></td>
-                <td>
-                    <select name="projects" class="selectpicker" multiple>
+                {% for field in form %} 
+                <tr>
+                    {% if field.name == "projects" %}
+                    <th>
+                    {{field.label_tag}}
+                    </th>
+                    <td>
+                    {{ field.errors }}
+                    <select class="selectpicker" id="projects" name="projects" multiple data-none-selected-text="--------">
                         {% for project in projects %}
                         <option>{{project}}</option>
                         {% endfor %}
                     </select>
-                </td -->
-                <!-- end of project update -->
+                    <!-- {% if field.help_text %}
+                        <p class="helptext">{{ field.help_text }}</p>
+                    {% endif %} -->
+                    </td>
+                    {% else %}
+                    <th>
+                    {{ field.label_tag}}
+                    </th>
+                    <td>
+                    {{ field.errors }}
+                    {{ field }}
+                    {% if field.help_text %}
+                        <p class="helptext">{{ field.help_text }}</p>
+                    {% endif %}
+                    </td>
+                    {% endif %}
+                </tr>
+                {% endfor %}
                 </thead>
             </table>
          </fieldset><br>
