Bootstrap-select assets for the multiselect dropdown menu to work.

--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -9,6 +9,13 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+        <!-- Bootstrap-select assets -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/i18n/defaults-*.min.js"></script>
+        <!-- end of Bootstrap-select assets -->
+
         <title>ElastiDjango Database Project</title>
         <link rel="stylesheet" href="{% static 'core/style.css' %}" />
         <!-- <script scr="{% static 'core/scripts.js' %}"></script> -->
