--- a/apps/core/static/core/style.css
+++ b/apps/core/static/core/style.css
@@ -63,3 +63,17 @@ a:hover {
     color: #616161;
     font-size: 12px;
 }
+
+.header {
+    background-color: #DCE775;
+    color: #212121;
+    margin-bottom: 5px;
+    padding-left: 5px;
+}
+
+#login {
+    background-color: #C5E1A5;
+    border: solid 1px #BDBDBD;
+    width: 400px;
+    margin: 0 auto;
+}
