add cancel button to create/update pages, KRONOS-47.

--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -81,6 +81,7 @@ Create Library
             </table>
          </fieldset><br>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+        <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
