--- a/apps/core/templates/core/sample_create.html
+++ b/apps/core/templates/core/sample_create.html
@@ -26,6 +26,7 @@ Create Sample
             </table>
          </fieldset>
         <input class="btn btn-primary btn-sm" type="submit" name="create" value="Create">
+        <a class="btn btn-default btn-sm" href="{% url 'core:sample_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
