--- a/apps/core/templates/core/sample_update.html
+++ b/apps/core/templates/core/sample_update.html
@@ -26,7 +26,8 @@ Edit Sample
             </table>
          </fieldset>
 
-	<input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+    	<input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <a class="btn btn-default btn-sm" href="{% url 'core:sample_list' %}">Cancel</a>
 	</form><br>
 </div>
 {% endblock %}
