--- a/apps/core/templates/core/project_delete.html
+++ b/apps/core/templates/core/project_delete.html
@@ -11,6 +11,7 @@ Delete project
     <form action="{% url 'core:project_delete' pk=pk %}" method="POST">
     	{% csrf_token %}
         <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Delete">
+        <a class="btn btn-default btn-sm" href="{% url 'core:project_list' %}">Cancel</a>
     </form>
 </div>
 {% endblock %}
