added features requested by Emma, see her comments in KRONOS-47.

--- a/apps/core/templates/core/library_create.html
+++ b/apps/core/templates/core/library_create.html
@@ -73,7 +73,7 @@ Create Library
             </table>
          </fieldset><br>
          <fieldset>
-            <legend style="color:#5D4037">Library Construction and Storage</legend>
+            <legend style="color:#5D4037">Library Quantification and Storage</legend>
             <table class="table-condensed">
                 <thead>
                 {{libqs_formset}}
