changed the title.

--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -19,7 +19,7 @@
         <link rel="stylesheet" href="{% static 'core/style.css' %}" />
         <!-- <script scr="{% static 'core/scripts.js' %}"></script> -->
 
-        <title>ElastiDjango Database Project</title>
+        <title>Single Cell Database</title>
 
     </head>
     <body>
