--- a/apps/core/templates/core/project_update.html
+++ b/apps/core/templates/core/project_update.html
@@ -12,7 +12,8 @@ Edit Project
         <table class="table-condensed">
         {{form}}
         </table>
-    <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <a class="btn btn-default btn-sm" href="{% url 'core:project_list' %}">Cancel</a>
     </form><br>
 </div>
 {% endblock %}
