--- a/apps/core/templates/core/sample_update.html
+++ b/apps/core/templates/core/sample_update.html
@@ -24,9 +24,8 @@ Edit Sample
                 {{formset}}
                 </thead>
             </table>
-         </fieldset>
-
-    	<input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+         </fieldset><br>
+    	<input class="btn btn-primary btn-sm" type="submit" name="update" value="Update">
         <a class="btn btn-default btn-sm" href="{% url 'core:sample_list' %}">Cancel</a>
 	</form><br>
 </div>
