--- a/apps/core/templates/core/library_update.html
+++ b/apps/core/templates/core/library_update.html
@@ -86,7 +86,7 @@ Edit Library
                 </thead>
             </table>
          </fieldset><br>
-        <input class="btn btn-primary btn-sm" type="submit" name="update" value="update">
+        <input class="btn btn-primary btn-sm" type="submit" name="update" value="Update">
         <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
     </form><br>
 </div>
