--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -24,25 +24,33 @@
     </head>
     <body>
         <!-- Header -->
-        <div class="container-fluid header">
-            <div class="navbar-header">
-                <a class="navbar-brand" style="color:white;" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Single Cell Database (<i>development version</i>)</a>
-            </div>
-
-
-            <!-- Search input box -->
-            <div class="navbar-collapse collapse" data-toggle="tooltip">
-            <form name="search-form" class="navbar-form navbar-right" action="{% url 'search' %}">
-                <div class="right-inner-addon">
-                    <i class="icon-search"></i>
-                    <input type="text" name="query_str" class="form-control" placeholder="Search..." />
+        <nav class="navbar navbar-default" style="background-color:#424242;" >
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-icon" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" style="color:white;" href="{% url 'index' %}"><i class="fa fa-home" aria-hidden="true"></i> Single Cell Database (<i>development version</i>)</a>
                 </div>
-            </form>
-            </div>
-            <!-- end of Search input box -->
 
-        </div><br>
-        <!-- end of header -->
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="collapse-icon">
+                    <ul class="nav navbar-nav navbar-right">
+                        <form name="search-form" class="navbar-form navbar-right" action="{% url 'search' %}" role="search">
+                            <div class="form-group right-inner-addon">
+                                <i class="icon-search"></i>
+                                <input type="text" name="query_str" class="form-control" placeholder="Search..." />
+                            </div>
+                        </form>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav><br>
+        <!-- end of Header -->
 
         <!-- Display messages -->
         <div class="container messages">
