--- a/apps/core/templates/core/library_delete.html
+++ b/apps/core/templates/core/library_delete.html
@@ -6,12 +6,21 @@ Delete Library
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h3>Do you want to detete library <i>{{library.sample.sample_id}}_{{library.pool_id}}</i>?</h3>
+<div class="container graybg">
+    <h5>Are you sure you want to detete library <i class="emph">{{library}}</i>? All of the following related items will be deleted too:</h5>
+    {% if library.sequencing_set.all %}
+    <ul style="list-style-type:square">
+    {% for sequencing in library.sequencing_set.all %}
+    <li><a href="{{sequencing.get_absolute_url}}">{{sequencing}}</a></li>
+    {% endfor %}
+    </ul>
+    {% else %}
+    <h5><i class="text-warning">There are no related items to this object!</i></h5>
+    {% endif %}
     <form action="{% url 'core:library_delete' pk=pk %}" method="POST">
-    	{% csrf_token %}
-        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Delete">
+        {% csrf_token %}
+        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
         <a class="btn btn-default btn-sm" href="{% url 'core:library_list' %}">Cancel</a>
-    </form>
+    </form><br>
 </div>
 {% endblock %}
