--- a/apps/core/templates/core/project_delete.html
+++ b/apps/core/templates/core/project_delete.html
@@ -6,11 +6,11 @@ Delete project
 {% endblock %}
 
 {% block body %}
-<div class="container">
-    <h3>Do you want to detete project <i>{{project}}</i>?</h3>
+<div class="container graybg">
+    <h5>Are you sure you want to detete sequencing <i class="emph">{{project}}</i>?</h5><br> 
     <form action="{% url 'core:project_delete' pk=pk %}" method="POST">
     	{% csrf_token %}
-        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Delete">
+        <input class="btn btn-danger btn-sm" type="submit" name="delete" value="Yes, I'm sure">
         <a class="btn btn-default btn-sm" href="{% url 'core:project_list' %}">Cancel</a>
     </form>
 </div>
